objects/Coaching_Session__c.object
<CustomObject>
    <fields>
        <fullName>Product_Sub_Issue__c</fullName>
        <description>Product Sub-Issue</description>
        <inlineHelpText>Product Sub-Issue</inlineHelpText>
        <label>Product Sub-Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event Information</fullName>
                </value>
                <value>
                    <fullName>Event Configuration</fullName>
                </value>
                <value>
                    <fullName>Registration Types</fullName>
                </value>
                <value>
                    <fullName>Salesforce Integration</fullName>
                </value>
                <value>
                    <fullName>Event Status</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Event Roles</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
                <value>
                    <fullName>Speakers</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Process Forms</fullName>
                </value>
                <value>
                    <fullName>Admission Items</fullName>
                </value>
                <value>
                    <fullName>Sessions</fullName>
                </value>
                <value>
                    <fullName>Session Groups</fullName>
                </value>
                <value>
                    <fullName>Tracks</fullName>
                </value>
                <value>
                    <fullName>Optional Items</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
                <value>
                    <fullName>Service Fees</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>Hotel Accommodations</fullName>
                </value>
                <value>
                    <fullName>Air Travel</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Event Website</fullName>
                </value>
                <value>
                    <fullName>Mobile Website</fullName>
                </value>
                <value>
                    <fullName>Language Management</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Registration Settings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onboarding Lite</fullName>
                </value>
                <value>
                    <fullName>Onboarding Standard</fullName>
                </value>
                <value>
                    <fullName>Ongoing Support</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <description>Training name</description>
        <inlineHelpText>Training name</inlineHelpText>
        <label>Session Name</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <description>Indicates what type of coaching session the question belongs to. The Coaching Session type will determine which questions get loaded when a coaching session is created.</description>
        <inlineHelpText>Select the Session Type (Coaching Form Type) for the current session.</inlineHelpText>
        <label>Session Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Coaching_Session_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Significant_Opportunity_Missed__c</fullName>
        <label>Significant Opportunity Missed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Session_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soft_Skill_Issue__c</fullName>
        <description>Soft skill issue details</description>
        <inlineHelpText>Soft skill issue details</inlineHelpText>
        <label>Soft Skill Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clarity of Speech</fullName>
                </value>
                <value>
                    <fullName>Grammar</fullName>
                </value>
                <value>
                    <fullName>MTI</fullName>
                </value>
                <value>
                    <fullName>Language - word selection</fullName>
                </value>
                <value>
                    <fullName>Written - Business Communication</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solvable_through_the_KB__c</fullName>
        <description>Was the case solvable using articles</description>
        <inlineHelpText>This is an assessment of the KB, not the Rep or the Customer. Please search the KB, and if a relevant article exists, please mark it YES.</inlineHelpText>
        <label>Solvable through the KB?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_of_Coaching__c</fullName>
        <label>Stage of Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation Initiator</fullName>
                </value>
                <value>
                    <fullName>Cancellation Processor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Describes the current status of an individual coaching session.</description>
        <inlineHelpText>Current Status of the Coaching Session</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Feedback Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>Date the coaching session was moved to Submitted</description>
        <inlineHelpText>Date the coaching session was moved to Submitted</inlineHelpText>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sum_of_Score__c</fullName>
        <description>Sum of Question scores</description>
        <inlineHelpText>This is the sum of scores achieved based on the response.</inlineHelpText>
        <label>Sum of Score</label>
        <summarizedField>Coaching_Session_Question__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response_Scale__c</field>
            <operation>notEqual</operation>
            <value>Boolean</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Survey_Suppression__c</fullName>
        <label>Survey Suppression/Work Avoidance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Possible Survey Suppression Case</fullName>
                </value>
                <value>
                    <fullName>Possible Work Avoidance Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <description>A place for a coach to enter a short summary of the coaching session.</description>
        <inlineHelpText>Overview of the coaching session</inlineHelpText>
        <label>Synopsis</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TM_Onboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>TM Onboarding</label>
        <referenceTo>TM_Buildout__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Spent_on_Coaching_In_Minutes__c</fullName>
        <label>Time Spent on Coaching (In Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timer_variance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Timer variance on the case being reviewed</description>
        <inlineHelpText>Timer variance on the case being reviewed</inlineHelpText>
        <label>Timer variance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Max_Score__c</fullName>
        <description>Absolute Max score of non boolean questions.</description>
        <inlineHelpText>Absolute Max score of non boolean (Non Critical Questions) questions for the Session Type.</inlineHelpText>
        <label>Total Max Score</label>
        <summarizedField>Coaching_Session_Question__c.Max_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Noncritical</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_unanswered_Questions__c</fullName>
        <label>Total unanswered Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response__c</field>
            <operation>notEqual</operation>
            <value>Yes, No, N/A, Met Expectations, Partially Met Expectations, Did Not Meet Expectations, Remarkable, Often Exceeds Expectations, Expectations Met, Improvement Needed, Unsatisfactory</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of trainer</description>
        <inlineHelpText>Name of trainer</inlineHelpText>
        <label>Trainer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Audience__c</fullName>
        <description>Internal/Client training</description>
        <inlineHelpText>Internal/Client training</inlineHelpText>
        <label>Training Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Training</fullName>
                </value>
                <value>
                    <fullName>Internal Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Purpose__c</fullName>
        <description>End goal achieved via the training</description>
        <inlineHelpText>End goal achieved via the training</inlineHelpText>
        <label>Training Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Upskill</fullName>
                </value>
                <value>
                    <fullName>General Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Session_Date__c</fullName>
        <label>Training Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <description>Type of Training</description>
        <inlineHelpText>Type of Training</inlineHelpText>
        <label>Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ILT</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>ILT and Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_during_a_calibration_session__c</fullName>
        <description>Was this coaching done for a calibration session</description>
        <inlineHelpText>Was this coaching done for a calibration session</inlineHelpText>
        <label>Used during a calibration session</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Evaluated_External__c</fullName>
        <label>User Evaluated - External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Evaluated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User being reviewed</description>
        <inlineHelpText>This is the person being coached</inlineHelpText>
        <label>User Evaluated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_s_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of User being evaluated</description>
        <inlineHelpText>Manager of User being evaluated</inlineHelpText>
        <label>User's Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_this_a_transfer_call__c</fullName>
        <description>To be checked if the call was transferred</description>
        <inlineHelpText>To be checked if the call was transferred</inlineHelpText>
        <label>Was this a transfer call?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_this_an_Onboarding_Object__c</fullName>
        <description>Is the record being reviewed an onboarding</description>
        <inlineHelpText>Is the record being reviewed an onboarding</inlineHelpText>
        <label>Was this an Onboarding Object?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Session_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_this_is_a_WFH_Transaction__c</fullName>
        <label>Was this is a WFH Transaction?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_s_missing__c</fullName>
        <description>What is missing from the session details (used for CSC Forms).</description>
        <inlineHelpText>What is missing - please provide details.</inlineHelpText>
        <label>What’s missing?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_went_well__c</fullName>
        <description>What went well for for CSC forms</description>
        <inlineHelpText>What went well for for CSC forms</inlineHelpText>
        <label>What went well</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Which_team_does_the_coach_work_for__c</fullName>
        <description>LOB of the coach being evaluated during CTC</description>
        <inlineHelpText>LOB of the coach being evaluated during CTC</inlineHelpText>
        <label>Which team does the coach work for?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>Creative Social Tables (PSG)</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass MSS</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
                <value>
                    <fullName>CSN Phone</fullName>
                </value>
                <value>
                    <fullName>CSN Planner</fullName>
                </value>
                <value>
                    <fullName>CSN Supplier</fullName>
                </value>
                <value>
                    <fullName>DoubleDutch</fullName>
                </value>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Emarketing</fullName>
                </value>
                <value>
                    <fullName>Enterprise event onsite team</fullName>
                </value>
                <value>
                    <fullName>Escalation Desk</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Event Builder</fullName>
                </value>
                <value>
                    <fullName>Group Meeting</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Kapow</fullName>
                </value>
                <value>
                    <fullName>Lanyon Attendee Support</fullName>
                </value>
                <value>
                    <fullName>Meeting Technology Advisors</fullName>
                </value>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>PassKey</fullName>
                </value>
                <value>
                    <fullName>Passkey Implementation</fullName>
                </value>
                <value>
                    <fullName>Quick Mobile</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>RFP Builder</fullName>
                </value>
                <value>
                    <fullName>SignUp4</fullName>
                </value>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Write_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Write-Off</label>
        <referenceTo>WriteOff__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1_1_Feedback_Comments__c</fullName>
        <description>Document comments for 1:1 feedback session</description>
        <inlineHelpText>Document comments for 1:1 feedback session</inlineHelpText>
        <label>1:1 Feedback Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1_1_feedback_delivered__c</fullName>
        <description>Status of 1:1 feedback session</description>
        <inlineHelpText>Status of 1:1 feedback session</inlineHelpText>
        <label>1:1 feedback delivered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1_1_feedback_delivered_date__c</fullName>
        <description>Date of 1:1 feedback session</description>
        <inlineHelpText>Date of 1:1 feedback session</inlineHelpText>
        <label>1:1 feedback delivered date</label>
        <type>DateTime</type>
    </fields>
    <description>Each coaching session is recorded here.</description>
    <label>Coaching Session</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Coaching Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>CrowdCompass_Coaching_last_15_days</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Submitted_Date__c</columns>
        <columns>User_Evaluated__c</columns>
        <columns>User_s_Manager__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Session_Type__c</columns>
        <columns>Final_Score_with_Critical_Error__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <filters>
            <field>Which_team_does_the_coach_work_for__c</field>
            <operation>equals</operation>
            <value>CrowdCompass</value>
        </filters>
        <filters>
            <field>PC_CSC_Team__c</field>
            <operation>equals</operation>
            <value>CrowdCompass</value>
        </filters>
        <label>CrowdCompass - Coaching last 15 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CrowdCompass_Coaching_last_60_days</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Submitted_Date__c</columns>
        <columns>User_Evaluated__c</columns>
        <columns>User_s_Manager__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Session_Type__c</columns>
        <columns>Final_Score_with_Critical_Error__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Which_team_does_the_coach_work_for__c</field>
            <operation>equals</operation>
            <value>CrowdCompass</value>
        </filters>
        <filters>
            <field>PC_CSC_Team__c</field>
            <operation>equals</operation>
            <value>CrowdCompass</value>
        </filters>
        <label>CrowdCompass - Coaching last 60 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CrowdCompass_Coaching_last_60_days1</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Submitted_Date__c</columns>
        <columns>User_Evaluated__c</columns>
        <columns>User_s_Manager__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <columns>Session_Type__c</columns>
        <columns>Final_Score_with_Critical_Error__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Which_team_does_the_coach_work_for__c</field>
            <operation>equals</operation>
            <value>CrowdCompass</value>
        </filters>
        <filters>
            <field>PC_CSC_Team__c</field>
            <operation>equals</operation>
            <value>CrowdCompass</value>
        </filters>
        <label>CrowdCompass - Coaching last 60 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Coaching1</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Submitted_Date__c</columns>
        <columns>User_Evaluated__c</columns>
        <columns>User_s_Manager__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Session_Type__c</columns>
        <columns>Final_Score_with_Critical_Error__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Which_team_does_the_coach_work_for__c</field>
            <operation>equals</operation>
            <value>Conference</value>
        </filters>
        <filters>
            <field>PC_CSC_Team__c</field>
            <operation>equals</operation>
            <value>Conference</value>
        </filters>
        <label>PS Conf - Coaching last 60 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PSG_PK</fullName>
        <columns>NAME</columns>
        <columns>User_Evaluated__c</columns>
        <columns>Session_Type__c</columns>
        <columns>Final_Score_with_Critical_Error__c</columns>
        <columns>Onboarding__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Used_during_a_calibration_session__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Evaluated__c</field>
            <operation>contains</operation>
            <value>mahajan,shanky,srikanth</value>
        </filters>
        <filters>
            <field>Session_Type__c</field>
            <operation>contains</operation>
            <value>Passkey</value>
        </filters>
        <label>PSG - PK - Coaching</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PS_Conf_Coaching_last_6_Months</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Submitted_Date__c</columns>
        <columns>User_Evaluated__c</columns>
        <columns>User_s_Manager__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Session_Type__c</columns>
        <columns>Final_Score_with_Critical_Error__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Which_team_does_the_coach_work_for__c</field>
            <operation>equals</operation>
            <value>Conference</value>
        </filters>
        <filters>
            <field>PC_CSC_Team__c</field>
            <operation>equals</operation>
            <value>Conference</value>
        </filters>
        <label>PS Conf - Coaching last 60 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PS_Imp_EQB_Coaching_last_60_days</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Submitted_Date__c</columns>
        <columns>User_Evaluated__c</columns>
        <columns>User_s_Manager__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Session_Type__c</columns>
        <columns>Final_Score_with_Critical_Error__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Which_team_does_the_coach_work_for__c</field>
            <operation>equals</operation>
            <value>Implementation</value>
        </filters>
        <filters>
            <field>PC_CSC_Team__c</field>
            <operation>equals</operation>
            <value>Implementation</value>
        </filters>
        <label>PS Imp &amp; EQB - Coaching last 60 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>